# AIECAD

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Capstone-Product-Spec.md  README.md  conanfile.py  main.cpp
aiecad/: Calc.cpp  Calc.hpp  Concepts.hpp  Macros.hpp  Portability.h  Portability.hpp  TypeTraits.hpp  Utility.hpp
aiecad/aiecad-compiler/: main.py
aiecad/aiecad-compiler/diagnostics/: codes.py
aiecad/aiecad_compiler/: README.md  XML_Structure_Guide.md  main.py
aiecad/aiecad_compiler/codegen/backends/: CodeGenerator.py
aiecad/aiecad_compiler/examples/applications/add_activate/: add_activate.graphml  add_activate.xml  generated_add_activate.py
aiecad/aiecad_compiler/examples/applications/matrix_mult/: generated_matmul.py  matmul.xml
aiecad/aiecad_compiler/examples/passthrough/: generated_passthrough.py  passthrough.graphml
aiecad/aiecad_compiler/extension/: CodeGeneratorExtender.py  ExtensionManager.py  README.md
aiecad/aiecad_compiler/graph_builder/: GraphDriver.py
aiecad/aiecad_compiler/hlir/: builder.py
aiecad/core/: Application.cpp  Application.hpp  GraphicsContext.hpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  SandboxService.hpp  Specifications.hpp  Window.cpp  Window.hpp
aiecad/core/editor/: CounterPanel.hpp  DemoLayer.hpp  EditorLayer.cpp  EditorLayer.hpp  EmptyLayer.hpp  UIStyle.cpp  UIStyle.hpp
aiecad/core/events/: EventBus.cpp  EventBus.hpp  EventBus.inl  EventSubscription.cpp  EventSubscription.hpp  EventSubscriptionGroup.hpp  Events.hpp
aiecad/core/logging/: Logger.cpp  Logger.hpp  LoggerConfig.hpp
aiecad/macros/: Macros.hpp
aiecad/macros/internal/: Container.hpp  ObjectTraits.hpp
aiecad/portability/: GMock.hpp  GTest.hpp
aiecad/portability/graphics/: GLFWWindow.cpp  GLFWWindow.hpp  GraphicsContext.hpp  OpenGLContext.cpp  OpenGLContext.hpp
aiecad/portability/graphics/backends/: OpenGLContext.hpp
aiecad/test/: CalcTest.cpp
aiecad/test/common/: TestMain.cpp
aiecad/test/core/: EventBusBasicTests.cpp  EventBusRaiiTests.cpp  EventBusThreadTests.cpp  LayerStackTests.cpp  LoggerTest.cpp
aiecad/test/ui/: PanelManagerTests.cpp
aiecad/ui/: DockSpace.cpp  DockSpace.hpp  ImGuiFramework.cpp  ImGuiFramework.hpp  ImGuiLayer.cpp  ImGuiLayer.hpp  MenuBar.cpp  MenuBar.hpp  PanelHostLayer.cpp  PanelHostLayer.hpp  UI.hpp  UIStyle.cpp  UIStyle.hpp  UiWidgets.cpp  UiWidgets.hpp
aiecad/ui/menu/: FileMenuItem.cpp  FileMenuItem.hpp  GlobalMenuBar.cpp  GlobalMenuBar.hpp  GlobalMenuItem.hpp  ToolsMenuItem.cpp  ToolsMenuItem.hpp
aiecad/ui/panels/: DeviceConnectionPanel.cpp  DeviceConnectionPanel.hpp  PanelManager.cpp  PanelManager.hpp  ProjectExplorer.cpp  ProjectExplorer.hpp  UIPanel.hpp
aiecad/utils/: Assert.hpp  Timestep.hpp
cmake/: AIECAD_Tests.cmake  FindXRT.cmake  ProjectDeps.cmake  SWAG_Tests.cmake
cmake/checks/: AIECADConfigs.cmake  AIECADPlatformChecks.cmake  SwagConfigs.cmake  SwagPlatformChecks.cmake
cmake/config/: aiecad-config.h.cmake  swag-config.h.cmake
cmake/settings/: ProjectDeps.cmake  ProjectOptions.cmake
cmake/utils/: AIECADAutoSource.cmake  Functions.cmake  SwagAutoSource.cmake
docs/: ProjectStructure.md
docs/design/: AIECAD-UML.asta
docs/developer/: ImGuiNotes.md
sandbox/: CMakeLists.txt  main.cpp
sandbox/event_bus_practice/: EventBus.hpp  Events.hpp  main.cpp
sandbox/iron_prog_examples/matmul/: README.md  single_core_matmul_placed.py
sandbox/panels/: main.cpp
swag/: Calc.cpp  Calc.hpp  Concepts.hpp  Portability.h  TypeTraits.hpp
swag/portability/: GMock.hpp  GTest.hpp
swag/test/: CalcTest.cpp  XRTSmokeTest.cpp
swag/test/common/: TestMain.cpp
